<resources>
    <string name="app_name">eBook Online Bookstore</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="register_here">Register Here</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup1">Signup</string>
    <string name="payment">Payment</string>
    <string name="todo">TODO</string>
    <string name="ebookstore">eBookstore</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="_100_books">100 Books</string>
    <string name="see_all">See all</string>
    <string name="rich_dad_poor_dad_forteens">Rich Dad Poor Dad forTeens</string>
    <string name="the_secrets_about_money">The Secrets about Money</string>
    <string name="power_moves_ignite">Power Moves: Ignite</string>
    <string name="your_confidence">Your Confidence</string>
    <string name="destination_of_time">Destination of Time:</string>
    <string name="_225_of_world_s_most">225 of World\'s Most</string>
    <string name="amazing_places">Amazing Places</string>
    <string name="mom_i_want_hear">Mom, I want Hear</string>
    <string name="your_story">Your Story</string>
    <string name="home1">Home</string>
    <string name="categories1">Categories</string>
    <string name="search">Search</string>
    <string name="bookmarks1">Bookmarks</string>
    <string name="sale">Sale</string>
    <string name="sale1">Sale</string>
    <string name="sale2">Sale</string>
    <string name="sale3">Sale</string>
    <string name="for_sale">For Sale</string>
    <string name="sale4">Sale</string>
    <string name="textview">TextView</string>
    <string name="authors">Authors,</string>
    <string name="titles">Titles,</string>
    <string name="books">books,</string>
    <string name="topics">topics</string>
    <string name="authors2">Authors</string>
    <string name="home4">Home</string>
    <string name="categories3">Categories</string>
    <string name="me1">Me</string>
    <string name="girls_in_pieces">Girls in Pieces</string>
    <string name="bites">Bites</string>
    <string name="power_moves">Power Moves</string>
    <string name="destination_of_a_lifetime">Destination of a lifetime</string>
    <string name="mom_i_want_to_hear_your_story">Mom, I want to hear your story.</string>
    <string name="tell_your_life_story">Tell Your Life Story</string>
    <string name="travel">Travel</string>
    <string name="destinations_of_a">Destinations of a</string>
    <string name="_225_of_the_world_s">225 of the world\'s</string>
    <string name="most_amazing_places">Most Amazing Places</string>
    <string name="total_prices_20_49">Total Prices:$20.49</string>
    <string name="checkout">Checkout</string>
    <string name="by_national_geographics">By National Geographics</string>
    <string name="lifetime">Lifetime</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="credit_of_debit_card_number">Credit of Debit Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="security_code">Security Code</string>
    <string name="total_20_49">Total $20.49</string>
    <string name="pay_now">Pay Now</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="with_ebookstore">with eBookstore</string>
    <string name="enjoy_your_journey">Enjoy Your Journey</string>
    <string name="popular">Popular</string>
    <string name="power_moves1">Power Moves</string>
    <string name="see_all1">See All</string>
    <string name="todo1">TODO</string>
    <string name="categories6">Categories</string>
    <string name="home8">Home</string>
    <string name="cart7">Cart</string>
    <string name="power_moves9">Power Moves</string>
    <string name="search8">Search</string>
    <string name="bookmarks9">Bookmarks</string>
    <string name="destinations_of_lifetime1">Destinations of Lifetime</string>
    <string name="mom_i_want_to_hear_your_story1">Mom, I want to Hear Your Story</string>
</resources>