<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrendingBooks">


    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="539dp"
        android:text="@string/sale"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="183dp"
        android:layout_marginEnd="190dp"
        android:text="@string/sale1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="348dp"
        android:text="@string/sale3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="551dp"
        android:text="@string/sale2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_sale"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,TextContrastCheck,VisualLintOverlap"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="551dp"
        android:text="@string/sale4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="571dp"
        android:layout_height="352dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="375dp"
        android:background="#FD9B0A"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/textview"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="55dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="120dp"
        android:layout_height="198dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="388dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dad"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="124dp"
        android:layout_height="141dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="169dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beach"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="138dp"
        android:layout_height="134dp"
        android:layout_marginStart="288dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/th"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteY="169dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="181dp"
        android:layout_height="122dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="246dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="145dp"
        android:layout_height="119dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bites"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="375dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="111dp"
        android:layout_height="122dp"
        android:layout_marginStart="268dp"
        android:layout_marginBottom="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/power"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="108dp"
        android:layout_height="126dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="559dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lifetime"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="115dp"
        android:layout_height="127dp"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/story"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="112dp"
        android:layout_height="129dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mom"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="356dp"
        android:text="Sale"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="64dp"
        android:layout_height="51dp"
        app:srcCompat="@drawable/baseline_home_24"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="794dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="63dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/baseline_category_24"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="790dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="80dp"
        android:layout_height="57dp"
        app:srcCompat="@drawable/baseline_person_24"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="427dp"
        tools:layout_editor_absoluteY="790dp" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home4"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="848dp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories3"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="848dp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="33dp"
        android:layout_height="30dp"
        android:text="@string/me1"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="450dp"
        tools:layout_editor_absoluteY="845dp" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="206dp"
        android:text="@string/girls_in_pieces"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="501dp"
        android:layout_marginBottom="209dp"
        android:text="@string/bites"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:layout_marginBottom="206dp"
        android:text="@string/power_moves"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="305dp" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/destination_of_a_lifetime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="696dp"
        android:text="@string/mom_i_want_to_hear_your_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_your_life_story"
        app:layout_constraintStart_toEndOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteY="715dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="628dp"
        android:text="Trending Books"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>