<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Travel">

    <TextView
        android:id="@+id/textView67"
        android:layout_width="453dp"
        android:layout_height="312dp"
        android:background="#FF9800"
        android:text=""
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-24dp"
        tools:layout_editor_absoluteY="-22dp" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="190dp"
        android:layout_height="191dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="453dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lifetime"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="28dp"
        android:text="@string/travel"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="311dp"
        android:text="@string/destinations_of_a"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_star_24"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="387dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_star_24"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="387dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_star_24"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="259dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_star_24"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView52"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="315dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_star_24"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="452dp"
        android:text="@string/_225_of_the_world_s"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="489dp"
        android:text="@string/most_amazing_places"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="516dp"
        android:text="@string/by_national_geographics"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="550dp"
        android:text="@string/total_prices_20_49"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="194dp"
        android:layout_marginTop="345dp"
        android:text="@string/lifetime"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginBottom="83dp"
        android:text="@string/add_to_cart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="111dp"
        android:text="@string/checkout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>